@@ -1,3 +1,7 @@
+2007-07-31  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/tile.c: this plug-in doesn't need a tile cache.
+
 2007-07-30  Sven Neumann  <sven@gimp.org>
 
 	* app/plug-in/gimpplugin.[ch]: don't call gp_quit_write() on a
